<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceScreen">

    <ImageView
        android:id="@+id/horizontal_logo"
        android:layout_width="350dp"
        android:layout_height="86dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="15dp"
        android:background="@color/white"
        android:contentDescription="@string/horizontal_logo_description"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_horizontal" />

    <Button
        android:id="@+id/config_file_delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/blue"
        android:contentDescription="@string/config_delete_button_description"
        android:fontFamily="@font/calibri_bold"
        android:text="@string/config_file_delete_button_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fiscal_mode_button_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/blue"
        android:contentDescription="@string/fiscal_mode_button_description"
        android:fontFamily="@font/calibri_bold"
        android:text=""
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/set_amount_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_file_delete_button"
        app:layout_constraintVertical_bias="0.474" />

    <Button
        android:id="@+id/set_amount_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/blue"
        android:contentDescription="@string/set_amount_button_description"
        android:fontFamily="@font/calibri_bold"
        android:text="@string/set_amount_button_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="156dp"
        android:backgroundTint="@color/blue"
        android:contentDescription="@string/start_button_description"
        android:fontFamily="@font/calibri_bold"
        android:text="@string/start_button_text"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>