<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Authorization_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthorizationScreen">

    <ImageView
        android:id="@+id/register_logo"
        android:layout_width="328dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="15dp"
        android:background="@color/white"
        android:contentDescription="@string/horizontal_logo_description"
        app:layout_constraintBottom_toTopOf="@+id/authorization"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005"
        app:srcCompat="@drawable/logo_horizontal"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/register_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:contentDescription="@string/register_TextView_description"
        android:fontFamily="@font/calibri_bold"
        android:gravity="center"
        android:text="@string/register_header_text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_logo"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/login_email_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:contentDescription="@string/email_TextView_description"
        android:fontFamily="@font/calibri_bold"
        android:text="@string/email_TextView_text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/authorization"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_header"
        app:layout_constraintVertical_bias="0.176"
        tools:ignore="MissingConstraints" />

<!--    <EditText
        android:id="@+id/login_phone_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Phone_editTextView_field_description"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/calibri"
        android:hint="@string/phone_field_hint"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_textview"
        app:layout_constraintVertical_bias="0.044"
        tools:ignore="MissingConstraints" />-->

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/email_editTextView_field_description"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/calibri"
        android:hint="@string/email_field_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_textview"
        app:layout_constraintVertical_bias="0.044"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/password_TextView_description"
        android:fontFamily="@font/calibri_bold"
        android:text="@string/password_TextView_text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_editText"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/password_editTextView_field_description"
        android:autofillHints="password"
        android:ems="10"
        android:fontFamily="@font/calibri"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_textview"
        app:layout_constraintVertical_bias="0.051"
        tools:ignore="ContentDescription,MissingConstraints" />

    <Button
        android:id="@+id/authorization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="250dp"
        android:backgroundTint="@color/blue"
        android:contentDescription="@string/authorization_button_description"
        android:fontFamily="@font/calibri_bold"
        android:text="@string/authorization_button_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>