<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/horizontal_logo"
        android:layout_width="350dp"
        android:layout_height="86dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="15dp"
        android:background="@color/white"
        android:contentDescription="@string/horizontal_logo_description"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/image_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_horizontal" />

    <ImageButton
        android:id="@+id/image_button"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:background="@color/white"
        android:contentDescription="@string/main_image_button_description"
        android:gravity="bottom"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/status_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/status_info_TextView_description"
        android:gravity="center"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752" />

    <ImageView
        android:id="@+id/fiscal_qr"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/fiscal_qr_description"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>